--- a/react/src/index.css
+++ b/react/src/index.css
@@ -292,9 +292,9 @@
 }
 
 @layer base {
-    html,
+    /*html,
     body,
     #root {
         height: 100%;
-    }
+    }*/
 }
